Update mode settings logic
* Add more settings
* Optimize/cache settings logic
* Add more settings screenshots

--- a/src/locale/en/player-list.cfg
+++ b/src/locale/en/player-list.cfg
@@ -13,11 +13,15 @@ player_label= __1__ __2__hr - __3__ __4__
 [mod-setting-name]
 player_list_settings_inventory_peek_enabled=Enable "Open Inventory" button for admins
 player_list_settings_inventory_target_all=Allow opening of admin inventory
+player_list_settings_refresh_period=Refresh period (seconds)
 player_list_settings_max_height=Max list height
 player_list_settings_entry_margin=Entry margin
+player_list_settings_playtime_bar_height=Playtime bar height
 
 [mod-setting-description]
 player_list_settings_inventory_peek_enabled=Admins will have the ability to open the inventory of other players
 player_list_settings_inventory_target_all=If enabled admins can open everyone's invenory not just non-admins
+player_list_settings_refresh_period=How often does the list refresh automatically
 player_list_settings_max_height=0 is no limit
 player_list_settings_entry_margin=Space between each player entry in the list
+player_list_settings_playtime_bar_height=Allows for a larger hover over area to see % played
