--- a/src/locale/ru/player-list.cfg
+++ b/src/locale/ru/player-list.cfg
@@ -13,11 +13,15 @@ player_label= __1__ __2__ч - __3__ __4__
 [mod-setting-name]
 player_list_settings_inventory_peek_enabled=Включить кнопку «Открыть инвентарь» для смогут
 player_list_settings_inventory_target_all=Разрешить открытие инвентаря администратора
+player_list_settings_refresh_period=Период обновления (секунды)
 player_list_settings_max_height=Максимальная высота списка
 player_list_settings_entry_margin=Пробел между записями
+player_list_settings_playtime_bar_height=Высота полосы «время игры»
 
 [mod-setting-description]
 player_list_settings_inventory_peek_enabled=Администраторы смогут открывать инвентарь других игроков
 player_list_settings_inventory_target_all=Если включено, администраторы могут открывать инвентарь всех, а не только тех, кто не администраторы.
+player_list_settings_refresh_period=Как часто список автоматически обновляется
 player_list_settings_max_height=0 означает нет ограничений
 player_list_settings_entry_margin=Пробел между каждой записью игрока в списке
+player_list_settings_playtime_bar_height=Позволяет навести курсор на большую область, чтобы увидеть % игры
